--- a/requirements.txt
+++ b/requirements.txt
@@ -22,13 +22,13 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 jsonpatch==1.33
 jsonpointer==2.4
-langchain==0.2.1
-langchain-community==0.0.38
-langchain-core==0.2.1
-langchain-openai==0.1.7
-langchain-text-splitters==0.2.0
-langchainhub==0.1.16
-langsmith==0.1.63
+langchain
+langchain-community
+langchain-core
+langchain-openai
+langchain-text-splitters
+langchainhub
+langsmith
 MarkupSafe==2.1.5
 marshmallow==3.21.2
 multidict==6.0.5
